-added robot commander

--- a/src/Performers/PerformersScene/Controls/RobotScene.xaml
+++ b/src/Performers/PerformersScene/Controls/RobotScene.xaml
@@ -41,6 +41,7 @@
                     </ItemsControl.ItemTemplate>
                 </ItemsControl>
                 <TextBlock Text="{Binding MazeLines.Count}" />
+                <controls:RobotControl DataContext="{Binding RobotViewModel}"/>
             </Canvas>
         </Border>
     </Grid>
