--- a/src/Performers/PerformersScene/View/MainWindow.xaml
+++ b/src/Performers/PerformersScene/View/MainWindow.xaml
@@ -12,8 +12,8 @@
 * See the License for the specific language governing permissions and
 * limitations under the License. -->
 
-<Window 
-    x:Class="WpfEditor.View.MainWindow" 
+<Window
+    x:Class="WpfEditor.View.MainWindow"
     x:ClassModifier="internal"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -29,9 +29,11 @@
     xmlns:validators="clr-namespace:WpfEditor.View.Validators"
     xmlns:controls="clr-namespace:PerformersScene.Controls"
     xmlns:converters="clr-namespace:PerformersScene.Controls.Converters"
+    xmlns:local="clr-namespace:WpfEditor.View"
     Title="{Binding WindowTitle}"
     mc:Ignorable="d"
-    Height="800" Width="1200">
+    Height="800" Width="1200"
+    d:DataContext="{local:MainWindow}">
 
     <Window.CommandBindings>
         <CommandBinding Command="New" CanExecute="OnCanExecuteForAlwaysExecutable" Executed="OnNewExecuted" />
@@ -46,106 +48,111 @@
 
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="Auto"/>
-            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="Auto" />
         </Grid.ColumnDefinitions>
 
         <!-- Main menu -->
         <Menu Grid.Row="0" Grid.ColumnSpan="4" IsMainMenu="True">
-            <MenuItem Header="_File" >
-                <MenuItem Header="_New" Command="New"/>
-                <MenuItem Header="Open..." Command="Open"/>
-                <MenuItem Header="_Save" Command="Save"/>
-                <MenuItem Header="_Save as..." Command="SaveAs"/>
-                <Separator/>
-                <MenuItem Header="_Quit" Command="Close"/>
+            <MenuItem Header="_File">
+                <MenuItem Header="_New" Command="New" />
+                <MenuItem Header="Open..." Command="Open" />
+                <MenuItem Header="_Save" Command="Save" />
+                <MenuItem Header="_Save as..." Command="SaveAs" />
+                <Separator />
+                <MenuItem Header="_Quit" Command="Close" />
             </MenuItem>
         </Menu>
 
         <!-- LeftPanel -->
-        <Grid 
-            Grid.Row="1" 
+        <Grid
+            Grid.Row="1"
             Grid.Column="0"
             x:Name="leftPanelGrid"
-            HorizontalAlignment="Left"/>
+            HorizontalAlignment="Left" />
 
         <!-- Area and console -->
         <Grid Grid.Row="1" Grid.Column="1">
 
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="65*"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="15*" MinHeight="50"/>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="65*" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="15*" MinHeight="50" />
             </Grid.RowDefinitions>
 
             <!-- Toolbar -->
-            <toolbar:ToolbarView x:Name="toolBar" Grid.Row="0" DataContext="{Binding Toolbar}" Height="30"/>
+            <toolbar:ToolbarView x:Name="toolBar" Grid.Row="0" DataContext="{Binding Toolbar}" Height="30" />
 
-            <Grid x:Name="sceneGrid"  Grid.Row="1">
+            <Grid x:Name="sceneGrid" Grid.Row="1">
                 <!-- Scene area -->
                 <TabControl Name="tabOfScenes">
-                    <TabItem IsSelected="{Binding IsFocusedOnEditor}" >
-                        <TabItem.Header>Editor</TabItem.Header>
+                    <TabItem IsSelected="{Binding IsFocusedOnEditor}">
+                        <TabItem.Header><Binding Path="EditorName"/></TabItem.Header>
                         <TabItem.Content>
-                            <scene:Scene x:Name="scene"/>
+                            <scene:Scene x:Name="scene" />
                         </TabItem.Content>
                     </TabItem>
-                    <TabItem Visibility="{Binding IsTurtleSceneVisible, Converter={StaticResource BoolToVisibilityConverter}}">
-                        <TabItem.Header>Logo Interpreter</TabItem.Header>
+                    <TabItem 
+                        Visibility="{Binding IsTurtleSceneVisible, Converter={StaticResource BoolToVisibilityConverter}}">
+                        <TabItem.Header><Binding Path="LogoInterpreterName"/></TabItem.Header>
                         <TabItem.Content>
-                            <controls:DrawingScene DataContext="{Binding DrawingScene}"/>
+                            <controls:DrawingScene DataContext="{Binding DrawingScene}" />
                         </TabItem.Content>
                     </TabItem>
-                    <TabItem Visibility="{Binding IsRobotSceneVisible, Converter={StaticResource BoolToVisibilityConverter}}">
-                        <TabItem.Header>Robot Interpreter</TabItem.Header>
+                    <TabItem
+                        Visibility="{Binding IsRobotSceneVisible, Converter={StaticResource BoolToVisibilityConverter}}">
+                        <TabItem.Header><Binding Path="RobotInterpreterName"/></TabItem.Header>
                         <TabItem.Content>
-                            <controls:RobotScene DataContext="{Binding RobotScene}"/>
+                            <controls:RobotScene DataContext="{Binding RobotScene}" />
                         </TabItem.Content>
                     </TabItem>
                 </TabControl>
             </Grid>
 
             <!-- GridSplitter for console -->
-            <GridSplitter Grid.Row ="2" HorizontalAlignment="Stretch" VerticalAlignment="Center" Height="5"/>
+            <GridSplitter Grid.Row="2" HorizontalAlignment="Stretch" VerticalAlignment="Center" Height="5" />
 
             <!-- Console with error messages -->
-            <console1:AppConsole Grid.Row="3" DataContext="{Binding Console}"/>
+            <console1:AppConsole Grid.Row="3" DataContext="{Binding Console}" />
 
         </Grid>
 
         <!-- GridSplitter for RightPanel-->
-        <GridSplitter Grid.Row="1" Grid.Column="2" VerticalAlignment="Stretch" HorizontalAlignment="Center" Width="5"/>
+        <GridSplitter Grid.Row="1" Grid.Column="2" VerticalAlignment="Stretch" HorizontalAlignment="Center" Width="5" />
 
         <!-- RightPanel -->
         <DockPanel Grid.Row="1" Grid.Column="3">
             <Grid x:Name="rightPanel">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto" MinHeight="70"/>
-                    <RowDefinition Height="140"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto" MinHeight="50"/>
-                    <RowDefinition Height="25"/>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" MinHeight="70" />
+                    <RowDefinition Height="140" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" MinHeight="50" />
+                    <RowDefinition Height="25" />
                 </Grid.RowDefinitions>
 
                 <!-- Model selector -->
-                <modelSelector:ModelSelector Grid.Row="0" x:Name="modelSelector" ModelSelected="OnModelSelectionChanged" HorizontalAlignment="Stretch" Margin="1,1,1,5"/>
+                <modelSelector:ModelSelector Grid.Row="0"
+                                             x:Name="modelSelector" ModelSelected="OnModelSelectionChanged"
+                                             HorizontalAlignment="Stretch" Margin="1,1,1,5" />
 
                 <palette:Palette x:Name="palette" Grid.Row="1"/>
 
-                <modelExplorer:ModelExplorer x:Name="modelExplorer" Grid.Row="2"/>
+                <modelExplorer:ModelExplorer x:Name="modelExplorer" Grid.Row="2" />
 
-                <Label x:Name="selectedEntityLabel" Grid.Row="3" Content="Selected entity:" HorizontalAlignment="Stretch" />
-                <attributesPanel:AttributesPanel Grid.Row="4" DataContext="{Binding AttributesPanel}"/>
-                
+                <Label x:Name="selectedEntityLabel" Grid.Row="3" Content="{Binding AttributesName}"
+                       HorizontalAlignment="Stretch" />
+                <attributesPanel:AttributesPanel Grid.Row="4" DataContext="{Binding AttributesPanel}" />
+
             </Grid>
 
         </DockPanel>
